Fixs images container overflow and element list

--- a/src/scss/components/element/_element-images.scss
+++ b/src/scss/components/element/_element-images.scss
@@ -3,6 +3,7 @@
   position: absolute;
   width: 100%;
   top: 0;  
+  overflow: hidden;  
    
    .images-carousel { 
       cursor: pointer !important; 
