--- a/src/scss/components/info-bar/_info-bar.scss
+++ b/src/scss/components/info-bar/_info-bar.scss
@@ -20,7 +20,7 @@
       overflow-y: auto;
     }
 
-    .img-overlay {
+    .img-container, .img-overlay {
       height:33%;
       background-color: transparent;
     }
