--- a/src/scss/components/list/_element-list.scss
+++ b/src/scss/components/list/_element-list.scss
@@ -106,10 +106,9 @@
 	}
 
 	.img-container
-   {
-      max-height: 20rem;
+	{
+	  max-height: 20rem;
 		background-color: #F7F7F7;
-		overflow: hidden;
-   }
+	}
 }
 
